--- a/public/index.html
+++ b/public/index.html
@@ -15,49 +15,41 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-45799926-9"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-K0K9VZTF9L"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-K0K9VZTF9L');
     </script>
-    <title>Free Modern React Templates &amp; Components for building landing pages and UIs - Treact</title>
+    <title>Edith Guzman Realtor - Tampa Bay</title>
     <meta
       name="description"
-      content="Easily customizable modern React UI Templates and Components built using TailwindCSS which are also lightweight and simple to setup. All components are modular and fully responsive for great mobile experience as well as big desktop screens.  Brand Colors are also fully customizable. "
+      content="Discover the allure of Tampa Bay living with a dedicated real estate expert who ensures a seamless experience. From finding your dream home to maximizing your investment, I leverage market expertise and personalized guidance to turn your vision into reality. Let's connect and embark on this exciting journey towards your real estate goals together!"
     />
-    <meta property="og:site_name" content="Treact" />
-    <meta property="og:title" content="Free Modern React Templates and Components for Building Landing Pages" />
+    <meta property="og:site_name" content="Edith Guzman Realtor" />
+    <meta property="og:title" content="Edith Guzman Realtor - Tampa Bay" />
     <meta
       property="og:description"
-      content="Easily customizable modern React UI Templates and Components built using TailwindCSS which are also lightweight and simple to setup. All components are modular and fully responsive for great mobile experience as well as big desktop screens.  Brand Colors are also fully customizable. "
+      content="Discover the allure of Tampa Bay living with a dedicated real estate expert who ensures a seamless experience. From finding your dream home to maximizing your investment, I leverage market expertise and personalized guidance to turn your vision into reality. Let's connect and embark on this exciting journey towards your real estate goals together!"
     />
-    <meta
+    <!-- <meta
       property="og:image"
       content="https://treact.owaiskhan.me/react-landing-pages-and-components-free-tailwindcss.png"
-    />
+    /> -->
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@owaiswiz" />
-    <meta name="twitter:creator" content="@owaiswiz" />
-    <meta name="twitter:title" content="Free Modern React Templates and Components for Building Landing Pages" />
+    <!-- <meta name="twitter:site" content="@owaiswiz" />
+    <meta name="twitter:creator" content="@owaiswiz" /> -->
+    <meta name="twitter:title" content="Edith Guzman Realtor - Tampa Bay" />
     <meta
       name="twitter:description"
       content="Easily customizable modern React UI Templates and Components built using TailwindCSS which are also lightweight and simple to setup. All components are modular and fully responsive for great mobile experience as well as big desktop screens.  Brand Colors are also fully customizable. "
     />
-    <meta name="twitter:image"
-    content="https://treact.owaiskhan.me/react-landing-pages-and-components-free-tailwindcss-twitter.png" />
+    <!-- <meta name="twitter:image"
+    content="https://treact.owaiskhan.me/react-landing-pages-and-components-free-tailwindcss-twitter.png" /> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
